--- a/_sass/libs/_grids.scss
+++ b/_sass/libs/_grids.scss
@@ -40,23 +40,13 @@
     grid-template-columns: 2fr 1fr;
 }
 
-.grid__columns-1-2--exact{
-    position: relative;
-    display: grid;
-    width: 100%;
-    gap: 1rem;
-    grid-template-columns: 1fr 2fr;
-}
-
 @media only screen and (max-width: $mediumdevice-width-2-1) {
-    // .grid__maxcolumns--2{
-    //     grid-template-columns: 1fr;
-    // }
     .grid__columns-2-1{
         grid-template-columns: 1fr;
     }
 }
 
+// TODO: Name looks sus
 .grid-w480px{
     position: relative;
     display: grid;
@@ -81,7 +71,7 @@
     }
 }
 
-.grid-full{
+.grid-fullwidth{
     position: relative;
     display: grid;
     align-items: center;
