--- a/_sass/libs/_menu.scss
+++ b/_sass/libs/_menu.scss
@@ -91,7 +91,7 @@
     padding: 0.5rem 1.5rem;
     color: var(--accent1);
     font-family: 'Palatino', serif;
-    font-size: 20px;
+    font-size: larger;
     font-weight: 600;
     text-decoration: none;
     transition-duration: .25s;
