Replace pixel sizes with rem sizes

--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -11,6 +11,9 @@
     --accent2               : #228ebf;
     --accent3               : #ee5622;
     --accent4               : #deb275;
+
+    --shadow-width-inner    : 0.6rem;
+    --shadow-width-outer    : 0.4rem;
 }
 
 :root.light {
