--- a/_sass/libs/_images.scss
+++ b/_sass/libs/_images.scss
@@ -13,17 +13,17 @@
   left: 0;
   width: 100%;
   height: 100%;
-  box-shadow: inset 0 0 12px 0 var(--container-shadow);
+  box-shadow: inset 0 0 var(--shadow-width-inner) 0 var(--container-shadow);
   border-radius: var(--round-radius);
   overflow: hidden;
 }
 
 .image__container:has(img.image__modal):hover::after{
-    box-shadow: 0 0 6px 0 var(--container-shadow);
+    box-shadow: 0 0 var(--shadow-width-outer) 0 var(--container-shadow);
 }
 
 a .image__container:hover::after{
-    box-shadow: 0 0 6px 0 var(--container-shadow);
+    box-shadow: 0 0 var(--shadow-width-outer) 0 var(--container-shadow);
 }
 
 .image__container img{
