--- a/_sass/libs/_menu.scss
+++ b/_sass/libs/_menu.scss
@@ -76,13 +76,13 @@
     position: fixed;
     top: 0;
     left: -100%;
-    width: 300px;
+    width: 16rem;
     height: 100%;
     margin: 0;
-    padding: 80px 0;
+    padding: 4rem 0;
     list-style: none;
     background-color: var(--bg-contrast);
-    box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+    box-shadow: 0 0 var(--shadow-width-inner) rgba(0, 0, 0, .8);
     transition-duration: .25s;
 }
 
