--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -34,9 +34,8 @@ h3 {
     grid-template-columns: 1fr $mediumdevice-width 1fr;
 }
 
-@media screen and (max-width: $sticky-header-width){
+@media screen and (max-width: $header-width){
     .main-grid{
         grid-template-columns: 0fr 1fr 0fr;
-        padding-top: 7rem;
     }
 }
