--- a/_sass/libs/_menu.scss
+++ b/_sass/libs/_menu.scss
@@ -14,7 +14,7 @@
 
 .menu__btn {
     display: block;
-    position: fixed;
+    position: absolute;
     top: 1rem;
     left: 1rem;
     width: 2.5rem;
