Cleanup with new home css file

--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -2,6 +2,7 @@
 @import 'libs/grids';
 @import 'libs/menu';
 @import 'libs/containers';
+@import 'libs/home';
 @import 'libs/buttons';
 @import 'libs/captions';
 @import 'libs/images';
