--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -31,7 +31,9 @@
 }
 
 $mediumdevice-width: 1080px;
-$mediumdevice-width-2-1: 720px; // TODO: home page refactor
+
+// Width at which the portrait hides on the about me section
+$about-me-width: 960px;
 
 // Starting width for sticky header, taking into account hamburger button
 // medium-width + button and padding
