--- a/_sass/libs/_buttons.scss
+++ b/_sass/libs/_buttons.scss
@@ -15,15 +15,19 @@
     border: 0;
     border-radius: 0.25rem;
 
-    box-shadow: 0 0 var(--shadow-width-outer) 0 var(--container-shadow);
+    background-color: var(--bg-contrast);
 
-    background-color: var(--accent1);
-
-    font-size: medium;
-    color: var(--text-white);
+    font-size: 1.5rem;
+    color: var(--accent1);
 
     cursor: pointer;
     transition: 0.3s, visibility 0.5s, opacity 0.5s;
+}
+
+@media only screen and (max-width: $header-width) {
+    #toTopBtn{
+        box-shadow: 0 0 var(--shadow-width-outer) 0 var(--container-shadow);
+    }
 }
 
 #loadMorePostsBtn {
