Make menu btn fixed if menu is open

--- a/_sass/libs/_menu.scss
+++ b/_sass/libs/_menu.scss
@@ -25,6 +25,10 @@
     z-index: 10;    
 }
 
+#menu__toggle:checked + .menu__btn {
+    position: fixed;
+}
+
 .menu__icon{
     display: block;
     width: 100%;
