Fix for reveal slider

--- a/_sass/external/reveal.scss
+++ b/_sass/external/reveal.scss
@@ -26,6 +26,7 @@
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	pointer-events: all; // explicitely allow pointer events
 }
 
 .reveal:not(.reveal-loaded) * {
