--- a/_sass/external/reveal.scss
+++ b/_sass/external/reveal.scss
@@ -27,6 +27,7 @@
 	-ms-user-select: none;
 	user-select: none;
 	pointer-events: all; // explicitely allow pointer events
+	overflow: hidden;
 }
 
 .reveal:not(.reveal-loaded) * {
