--- a/_sass/external/reveal.scss
+++ b/_sass/external/reveal.scss
@@ -75,7 +75,7 @@
 	width: 3rem;
 	height: 3rem;
 	border-radius: 3rem;
-	background: var(--bg-contrast);
+	background: var(--bg-note);
 	left: -1.4rem; // -0.5*(grabber - bar)
 	border: 0.2rem solid var(--accent3);
 }
