Centered modal image

--- a/_sass/libs/_images.scss
+++ b/_sass/libs/_images.scss
@@ -44,10 +44,7 @@ a .image__container:hover::after{
     visibility: hidden;
     opacity: 0;
     transition-duration: 0.25s;
-}
 
-/* The Modal (background) */
-.modal {
     position: fixed;
     z-index: 100;
     left: 0;
@@ -65,24 +62,27 @@ a .image__container:hover::after{
     background-color: rgba(0,0,0,0.9);
 }
 
-.modal-content {
+#modal-content {
+    display: block;
     padding-top: 1rem;
     margin: auto;
-    display: block;
+    
     width: 90%;
+    height: 90%;
     max-height: 90%;
     object-fit: contain;
     pointer-events: none;
 }
 
 #modal-caption {
+    margin-top: 0;
     margin: auto;
     display: block;
     width: 90%;
 
     text-align: center;
     color: var(--text-white);
-    padding: 0.5em 0;
+    padding: 0.5rem 0;
 }
 
 #modal-close {
