--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -34,6 +34,8 @@ $mediumdevice-width: 1080px;
 
 // Width at which the portrait hides on the about me section
 $about-me-width: 960px;
+// Width at which the showcase elements need to stack
+$showcase-elements-width: 600px;
 
 // Starting width for sticky header, taking into account hamburger button
 // medium-width + button and padding
