--- a/_sass/libs/_grids.scss
+++ b/_sass/libs/_grids.scss
@@ -1,12 +1,3 @@
-.grid__maxcolumns--2{
-    position: relative;
-    display: grid;
-    width: 100%;
-    gap: 1rem;
-    grid-template-columns: repeat(2, 1fr);
-    margin: 1rem 0;
-}
-
 .grid__columns--exactly2{
     position: relative;
     display: grid;
@@ -31,6 +22,16 @@
     align-items: top;
 }
 
+.grid__showcase-elements{
+    position: relative;
+    display: grid;
+    width: 100%;
+    // gap: 1rem;
+    // row-gap: 1rem;
+    column-gap: 1rem;
+    grid-template-columns: repeat(2, 1fr);
+}
+
 // TODO: Name looks sus
 .grid-w480px{
     position: relative;
@@ -52,6 +53,12 @@
 
 @media only screen and (max-width: 480px) {
     .grid-w480px {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media only screen and (max-width: $showcase-elements-width){
+    .grid__showcase-elements{
         grid-template-columns: 1fr;
     }
 }
