--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -25,7 +25,7 @@
 
 :root.dark {
     --bg-main               : #4d5d6a;
-    --bg-contrast           : #ebece7;
+    --bg-contrast           : #2d2d2d;
 
     --text                  : #ebece7;
 }
