--- a/_includes/header_home.html
+++ b/_includes/header_home.html
@@ -18,7 +18,7 @@
                         {% for page in navlist %}
                         <li><a class="menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
                         {% endfor %}
-                        <li class="menu__item" style="cursor: pointer;" onclick="mySwitchTheme()"><button class="theme-btn"><i class="fas fa-adjust"></i></button></li>
+                        <li class="menu__item" style="cursor: pointer;" onclick="mySwitchTheme()"><button class="theme-btn"><i class="fa-regular fa-lightbulb"></i></button></li>
                     </ul>
                     <div class="menu__overlay"></div>
                 </label>   
