--- a/_includes/header_home.html
+++ b/_includes/header_home.html
@@ -4,31 +4,45 @@
     <div class="header-grid">
         <div></div>
 
-        <div class="title-box">
-            <div id="hamburger-menu">
-                <input id="menu__toggle" type="checkbox" />
-                <label class="menu__btn" for="menu__toggle">
-                    <div class="menu__icon">
-                        <span></span>
-                    </div>
+        <div>
+            <div class="title-box">
+                <div id="hamburger-menu">
+                    <input id="menu__toggle" type="checkbox" />
+                    <label class="menu__btn" for="menu__toggle">
+                        <div class="menu__icon">
+                            <span></span>
+                        </div>
 
-                    <ul class="menu__box">
-                        <li><a class="menu__item" href="{{ site.baseurl }}/">Home</a></li>
-                        {% assign navlist = site.html_pages | where_exp:"item","item.nav-menu >= 0" | sort: 'nav-menu' %}
-                        {% for page in navlist %}
-                        <li><a class="menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
-                        {% endfor %}
-                        <li class="menu__item" style="cursor: pointer;" onclick="mySwitchTheme()"><button class="theme-btn"><i class="fa-regular fa-lightbulb"></i></button></li>
-                    </ul>
-                    <div class="menu__overlay"></div>
-                </label>   
+                        <ul class="menu__box">
+                            <li><a class="menu__item" href="{{ site.baseurl }}/">Home</a></li>
+                            {% assign navlist = site.html_pages | where_exp:"item","item.nav-menu >= 0" | sort: 'nav-menu' %}
+                            {% for page in navlist %}
+                            <li><a class="menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+                            {% endfor %}
+                            <li class="menu__item" style="cursor: pointer;" onclick="mySwitchTheme()"><button class="theme-btn"><i class="fa-regular fa-lightbulb"></i></button></li>
+                        </ul>
+                        <div class="menu__overlay"></div>
+                    </label>   
+                </div>
+
+                <h1>Kelvin van Hoorn</h1>
             </div>
-
-            <h1>Kelvin van Hoorn</h1>
+            <ul class="header-menu">
+                {% for page in navlist %}
+                <li><a class="header-menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
         </div>
 
         <div></div>
     </div>
+
+
+    <!-- <ul class="header-menu">
+        {% for page in navlist %}
+        <li><a class="header-menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+        {% endfor %}
+    </ul> -->
 
     <!-- TODO: remake navbar -->
     <!-- <div class="navbar">
