--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -60,9 +60,29 @@
     
         background-color: var(--bg-main);
     
-        border-bottom: .2em solid var(--accent1);
-    
-        margin-bottom: 2em;
+        // border-bottom: .2em solid var(--accent1);
+    }
+
+    .header-menu{
+        list-style: none;
+        word-break: keep-all;
+        overflow-x: auto;
+        white-space: nowrap;
+        text-align: center;
+        padding: 0.25em 0;
+        margin: 0;
+        background-color: var(--accent1);
+        border-radius: var(--round-radius);
+    }
+
+    .header-menu__item{
+        font-size: large;
+        font-weight: 700;
+        color: var(--bg-note);
+    }
+
+    .header-menu li{
+        display: inline-block;
     }
     
     @media screen and (max-width: $header-width){
@@ -73,6 +93,9 @@
             left:0;
             width: 100%;
             z-index: 5;
+        }
+        .header-menu{
+            margin: 0 0.5rem;
         }
     }
 }
