--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -76,8 +76,9 @@
     }
 
     .header-menu__item{
-        font-size: large;
+        font-size: larger;
         font-weight: 700;
+        font-family: 'Palatino', serif;
         color: var(--bg-note);
     }
 
