--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
 {% include head.html %}
   <body>
     
-    {% include header_home.html %}
+    {% include header.html %}
 
     <div class="main-grid">
 
