--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,48 +1,43 @@
 <!-- Header -->
 <header id="header">
-
     <div class="header-grid">
         <div></div>
 
-        <div class="title-box">
-            <div id="hamburger-menu">
-                <input id="menu__toggle" type="checkbox" />
-                <label class="menu__btn" for="menu__toggle">
-                    <div class="menu__icon">
-                        <span></span>
-                    </div>
+        <div>
+            <div class="title-box">
+                <div id="hamburger-menu">
+                    <input id="menu__toggle" type="checkbox" />
+                    <label class="menu__btn" for="menu__toggle">
+                        <div class="menu__icon">
+                            <span></span>
+                        </div>
 
-                    <ul class="menu__box">
-                        <li><a class="menu__item" href="{{ site.baseurl }}/">Home</a></li>
-                        {% assign navlist = site.html_pages | where_exp:"item","item.nav-menu >= 0" | sort: 'nav-menu' %}
-                        {% for page in navlist %}
-                        <li><a class="menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
-                        {% endfor %}
-                        <li class="menu__item" style="cursor: pointer;" onclick="mySwitchTheme()"><button class="theme-btn"><i class="fa-regular fa-lightbulb"></i></button></li>
-                    </ul>
-                    <div class="menu__overlay"></div>
-                </label>   
+                        <ul class="menu__box">
+                            <li><a class="menu__item" href="{{ site.baseurl }}/">Home</a></li>
+                            {% assign navlist = site.html_pages | where_exp:"item","item.nav-menu >= 0" | sort: 'nav-menu' %}
+                            {% for page in navlist %}
+                            <li><a class="menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+                            {% endfor %}
+                            <li class="menu__item" style="cursor: pointer;" onclick="mySwitchTheme()"><button class="theme-btn"><i class="fa-regular fa-lightbulb"></i></button></li>
+                        </ul>
+                        <div class="menu__overlay"></div>
+                    </label>   
+                </div>
+
+                {% if page.title == "Home" %}
+                <h1>Kelvin van Hoorn</h1>
+                {% else %}
+                <h1>{{page.title}}</h1>
+                {% endif %}
             </div>
-
-            <h1>{{page.title}}</h1>
+            <ul class="header-menu">
+                <li><a class="header-menu__item" href="{{ site.baseurl }}/">Home</a></li>
+                {% for page in navlist %}
+                <li><a class="header-menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
         </div>
 
         <div></div>
     </div>
-
-    <!-- TODO: remake navbar -->
-    <!-- <div class="navbar">
-        
-        <a href="{{ site.baseurl }}/" class="logo">{{ site.title }}</a>
-
-        <div></div>
-        
-        <div>
-            {% assign navlist = site.html_pages | where_exp:"item","item.nav-menu >= 0" | sort: 'nav-menu' %}
-            {% for page in navlist %}
-                <a href="{{ page.url | absolute_url }}">{{ page.title }}</a>
-            {% endfor %}
-            <button class="theme-btn" onclick="mySwitchTheme()"><i class="fas fa-adjust"></i></button>
-        </div>
-    </div> -->
 </header>
