--- a/_sass/libs/_menu.scss
+++ b/_sass/libs/_menu.scss
@@ -1,6 +1,12 @@
 #hamburger-menu {
-    // display: none;
+    display: none;
     text-align: left;
+}
+
+@media screen and (max-width: $navbar-width){
+    #hamburger-menu{
+        display: block;
+    }
 }
 
 #menu__toggle {
