--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,13 +30,16 @@
                 <h1>{{page.title}}</h1>
                 {% endif %}
             </div>
-            <ul class="header-menu">
-                <li><a class="header-menu__item" href="{{ site.baseurl }}/">Home</a></li>
-                {% for page in navlist %}
-                <li><a class="header-menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
-                {% endfor %}
-                <li class="header-menu__item" style="cursor: pointer;" onclick="mySwitchTheme()"><button class="theme-btn"><i class="fa-regular fa-lightbulb"></i></button></li>
-            </ul>
+            <div id="navbar">
+                <ul>
+                    <li><a href="{{ site.baseurl }}/">Home</a></li>
+                    {% for page in navlist %}
+                    <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+                    {% endfor %}
+                    <li style="cursor: pointer;" onclick="mySwitchTheme()"><button class="theme-btn"><i class="fa-regular fa-lightbulb"></i></button></li>
+                </ul>
+            </div>
+            
         </div>
 
         <div></div>
