--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -24,12 +24,13 @@
         margin: 0;
 
         ul{
+            display: flex;
             list-style: none;
             word-break: keep-all;
             overflow-x: auto;
             white-space: nowrap;
             text-align: center;
-            padding: 0.25em 0;
+            padding: 0.25rem 0.25rem;
             margin: 0;
         }
 
@@ -43,6 +44,7 @@
 
         li{
             display: inline-block;
+            padding: 0 0.25rem;
         }
 
         .theme-btn{
