--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -9,8 +9,7 @@
         display: block;
         align-items: center;
 
-        padding-left: 3.5rem;
-        padding-right: 3.5rem;
+        padding: 0 3.5rem;
         
         text-align: center;
         width: 100%;
