--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -12,7 +12,7 @@ body {
 
 h1 {
     font-size: 2.5rem;
-    line-height: 1.2em;
+    line-height: 1.2em; // Necessary for multi-line titles with emojis
     font-family: 'Palatino', serif;
 }
 
