Added autoplay script and applied to homescreen

--- a/_includes/core.html
+++ b/_includes/core.html
@@ -7,6 +7,9 @@
 <!-- Theme selection -->
 <script src="/assets/js/themeSelect.js"></script>
 
+<!-- Video autoplay -->
+<script src="assets/js/autoplay.js"></script>
+
 <!-- MathJax line breaks -->
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
