Moved autoplay into core.html

--- a/_includes/core.html
+++ b/_includes/core.html
@@ -7,9 +7,6 @@
 <!-- Theme selection -->
 <script src="/assets/js/themeSelect.js"></script>
 
-<!-- Video autoplay -->
-<script src="assets/js/autoplay.js"></script>
-
 <!-- MathJax line breaks -->
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
@@ -202,4 +199,31 @@
     newDiv.classList.add('caption__text');
     this.after(newDiv);
     });
-</script>    
+</script>
+
+<!-- Video autoplay -->
+<script>
+    $(document).ready(function() {
+        let options = {
+            root: null,    // browser viewport
+            rootMargin: '0px',
+            threshold: 0.66 // target element visible 66%
+        }
+
+        let observer = new IntersectionObserver(playOnFocus, options);
+        let targets = document.querySelectorAll('.video-autoplay');
+        targets.forEach(target => {    // adding observer for all videos
+            observer.observe(target);
+        });
+    });
+
+    const playOnFocus = (entries, observer) => {    // callback
+        entries.forEach((entry) => {
+            if(entry.isIntersecting) {
+                entry.target.play();    // play target video
+            } else {
+                entry.target.pause();    // pause video
+            }
+        });
+    };
+</script>
