--- a/_sass/libs/_containers.scss
+++ b/_sass/libs/_containers.scss
@@ -61,7 +61,7 @@
 
 .social__container--compact{
     display: inline-flex;
-    width: fit-content;
+    padding: 0.5rem;
     color: var(--text-white);
 
     border-radius: var(--round-radius);
