Update bsky links

--- a/_includes/socials.html
+++ b/_includes/socials.html
@@ -14,7 +14,7 @@
             <i class="fab fa-mastodon" style="vertical-align:text-bottom;"></i>
         </div>
     </a>
-    <a href="https://bsky.app/profile/kelvinvanhoorn.bsky.social" target="_blank" style="text-decoration: none;">
+    <a href="https://bsky.app/profile/kelvinvanhoorn.com" target="_blank" style="text-decoration: none;">
         <div class="social__container--compact">
             <i class="fab fa-bluesky" style="vertical-align:text-bottom;"></i>
         </div>
