Fix for prism overflow, and removal of main-grid
main-grid was some legacy implementation that is much cleaner implemented in main-content

--- a/_sass/libs/_collapsible.scss
+++ b/_sass/libs/_collapsible.scss
@@ -32,7 +32,7 @@
     display:grid;
     // width:100%;
     max-height: 0;
-    overflow: hidden;
+    overflow: auto;
     // transition: max-height 0.2s ease-out;
     background-color: var(--bg-main);
 
